refac staff and enum

--- a/.md
+++ b/.md
@@ -40,6 +40,30 @@ public void updateSchoolName(UUID schoolId, String newName) {
 
 
 
+- Boolean vs boolean :
+    // in the DTO level , when validating a request body  and entity level
+    boolean is a  Java primitives and can never be null — they default to false if not explicitly set. So:
+
+        When the field is missing or explicitly set to null in the JSON request,
+
+        The deserialization (e.g., via Jackson) sets the field to its default value, which is false for boolean.
+
+        @NotNull doesn’t do anything, because the value is never null — it's just false.
+    
+
+    Correct Approach : 
+    Use the wrapper type Boolean instead of primitive boolean so that null values are possible, and @NotNull can work as intended:
+    
+        @NotNull
+        private Boolean safetyCompliance;
+
+
+    the same thing apply in the entity level of JPA So if you want the column to be NOT NULL, use Boolean + @NotNull.
+    Best approach(always be explicit anyway wheither it s only true false , or can be nullable, dont use boolean  )
+        @Column(nullable = false)
+        @NotNull
+        private Boolean safetyCompliance;
+
 
 
 
